Finish args check and directories creation

--- a/README
+++ b/README
@@ -12,19 +12,26 @@
 
 Β) Script create_infiles.sh
 
-i.  Κατά την είσοδο γίνονται οι εξής έλεγχοι:
+i.  Κατά την είσοδο γίνονται οι εξής έλεγχοι, με την εμφάνιση κάθε φορά κατάλληλου μηνύματος:
     - ότι δόθηκε ο ορθός αριθμός παραμέτρων,
-    - ότι η πρώτη και η δεύτερη παράμετρος (virusesFile, countriesFile) είναι υπαρκτά αρχεία,
-    - ότι η τρίτη παράμετρος (numLines) είναι θετικός αριθμός,
-    - ότι η τέταρτη παράμετρος (duplicatesAllowed) είναι ο αριθμός 0 ή 1.
+    - ότι η πρώτη παράμετρος (inputFile) είναι υπαρκτό αρχείο,
+    - ότι η δεύτερη παράμετρος (input_dir) περιέχει μόνο έγκυρους για ονόματα καταλόγων χαρακτήρες (σαν σχεδιαστική επιλογή δεν γίνονται δεκτά κενά και ειδικοί χαρακτήρες πέραν των - και _.),
+    - ότι δεν υφίσταται κατάλογος με το όνομα που δίνεται ως δεύτερο όρισμα
+    - ότι η τρίτη παράμετρος (numFilesPerDirectory) είναι θετικός ακέραιος αριθμός,
 
 ii. Σε περίπτωση που δοθεί ενεργό το flag duplicatesAllowed, το script παράγει duplicate records σε ποσοστό 2%.
 
 iii.Για να επιτευχθεί η μοναδικότητα των citizenID σε περίπτωση που δεν επιτρέπονται τα duplicates, το script δέχεται ως όρισμα numLines έναν αριθμό < 10000.
 
-iv. Το script δοκιμάστηκε για τον χρόνο εκτέλεσης, με ενδεικτικά αποτελέσματα:
-    time ./create_infiles.sh inputFile.txt input_dir 3
+iv. Το script δοκιμάστηκε για τον χρόνο εκτέλεσης, με ενδεικτικά αποτελέσματα gia inpute files 500 και 20.000 εγγραφών, αντίστοιχα:
+    time ./create_infiles.sh inputFile500.txt input_dir 3
 
-    real	0m4,265s
-    user	0m1,722s
-    sys	0m0,875s
+    real	0m1,365s
+    user	0m1,100s
+    sys 	0m0,301s
+
+    time ./create_infiles.sh inputFile20k.txt input_dir 3
+
+    real	0m54,452s
+    user	0m46,125s
+    sys 	0m13,181s
