finish bash script

--- a/README
+++ b/README
@@ -15,23 +15,29 @@
 i.  Κατά την είσοδο γίνονται οι εξής έλεγχοι, με την εμφάνιση κάθε φορά κατάλληλου μηνύματος:
     - ότι δόθηκε ο ορθός αριθμός παραμέτρων,
     - ότι η πρώτη παράμετρος (inputFile) είναι υπαρκτό αρχείο,
-    - ότι η δεύτερη παράμετρος (input_dir) περιέχει μόνο έγκυρους για ονόματα καταλόγων χαρακτήρες (σαν σχεδιαστική επιλογή δεν γίνονται δεκτά κενά και ειδικοί χαρακτήρες πέραν των - και _.),
+    - ότι η δεύτερη παράμετρος (input_dir) περιέχει μόνο έγκυρους για ονόματα καταλόγων χαρακτήρες (σαν σχεδιαστική επιλογή δεν γίνονται δεκτά κενά και ειδικοί χαρακτήρες πέραν των "-" και "_".),
     - ότι δεν υφίσταται κατάλογος με το όνομα που δίνεται ως δεύτερο όρισμα
     - ότι η τρίτη παράμετρος (numFilesPerDirectory) είναι θετικός ακέραιος αριθμός,
 
-ii. Σε περίπτωση που δοθεί ενεργό το flag duplicatesAllowed, το script παράγει duplicate records σε ποσοστό 2%.
+ii.  Για την δημιουργία των καταλόγων και των αρχειών χρησιμοποιείται μια associative array που αποθηκεύει ως κλειδί την κάθε χώρα και ως value τον αριθμό αρχείου κάθε χώρας που έπεται για γράψιμο.
+     Έτσι, δεν απαιτείται πάνω από μία ανάγνωση του input_file για την παραγωγή directories και αρχείων και για την round robin κατανομή των εγγραφών.
 
-iii.Για να επιτευχθεί η μοναδικότητα των citizenID σε περίπτωση που δεν επιτρέπονται τα duplicates, το script δέχεται ως όρισμα numLines έναν αριθμό < 10000.
-
-iv. Το script δοκιμάστηκε για τον χρόνο εκτέλεσης, με ενδεικτικά αποτελέσματα gia inpute files 500 και 20.000 εγγραφών, αντίστοιχα:
+iii. Το script δοκιμάστηκε για τον χρόνο εκτέλεσης, με ενδεικτικά αποτελέσματα gia inpute files 500 και 20.000 εγγραφών, αντίστοιχα:
     time ./create_infiles.sh inputFile500.txt input_dir 3
 
     real	0m1,365s
     user	0m1,100s
     sys 	0m0,301s
 
+    time ./create_infiles.sh inputFile5k.txt input_dir 3
+
+    real	0m25,122s
+    user	0m19,106s
+    sys	    0m4,244s
+
+
     time ./create_infiles.sh inputFile20k.txt input_dir 3
 
-    real	0m54,452s
-    user	0m46,125s
-    sys 	0m13,181s
+    real	0m59,244s
+    user	0m43,011s
+    sys 	0m12,060s
