--- a/README
+++ b/README
@@ -20,7 +20,7 @@ i.  Κατά την είσοδο γίνονται οι εξής έλεγχοι, 
     - ότι η τρίτη παράμετρος (numFilesPerDirectory) είναι θετικός ακέραιος αριθμός,
 
 ii.  Για την δημιουργία των καταλόγων και των αρχειών χρησιμοποιείται μια associative array που αποθηκεύει ως κλειδί την κάθε χώρα και ως value τον αριθμό αρχείου κάθε χώρας που έπεται για γράψιμο.
-     Έτσι, δεν απαιτείται πάνω από μία ανάγνωση του input_file για την παραγωγή directories και αρχείων και για την round robin κατανομή των εγγραφών.
+     Έτσι, δεν απαιτείται πάνω από μία ανάγνωση του input_file για την παραγωγή directories και αρχείων και για την round-robin κατανομή των εγγραφών.
 
 iii. Το script δοκιμάστηκε για τον χρόνο εκτέλεσης, με ενδεικτικά αποτελέσματα gia inpute files 500 και 20.000 εγγραφών, αντίστοιχα:
     time ./create_infiles.sh inputFile500.txt input_dir 3
